# logcerr

./: .clang-tidy  README.md  meson.build  meson_options.txt
examples/: example.cpp  meson.build  readme.cpp
logcerr/: meson.build
logcerr/include/logcerr/: log.hpp
logcerr/src/: core.cpp  format.cpp
